objects/Rate__c.object
<CustomObject>
    <fields>
        <fullName>CPP_PER_ENROLLEE_PER_MONTH_1__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Diff PEPM Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CPP_PER_ENROLLEE_PER_MONTH_2__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Diff PEPM Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CPP_PER_ENROLLEE_PER_MONTH_BA_HMO__c</fullName>
        <label>per Enrollee per month</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CPP_PER_ENROLLEE_PER_MONTH_HMO__c</fullName>
        <label>per Enrollee per month</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CPP_SERVICE_CHARGE_COVERAGE__c</fullName>
        <label>Service Charges Apply To</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Applies to all Coverages</fullName>
                </value>
                <value>
                    <fullName>Net Claims / Per Employee Per Month</fullName>
                </value>
                <value>
                    <fullName>Different Percentages Amounts</fullName>
                    <label>Different %-age / Amounts</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CPP_VIRTUAL_VISIT_FEES__c</fullName>
        <label>Virtual Visits</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fees Per Covered Employee</fullName>
                </value>
                <value>
                    <fullName>Fee Included in Service Charges</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CPP_VIRTUAL_VISIT_PER_EMPLOYEE_PER_MONTH__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Virtual Visit Fee PEPM</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Charges__c</fullName>
        <label>Charges</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Applies to all coverages</fullName>
                </value>
                <value>
                    <fullName>Different % / $ for types explained below</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Checkbox__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether there are special  enrollment periods for persons to enroll in the plan that the BPA relates to</description>
        <label>Checkbox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Claim_Administrator_Provider_Access_Fee__c</fullName>
        <label>Claim Administrator Provider Access Fee</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Includes</fullName>
                </value>
                <value>
                    <fullName>Excludes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Claim_Settlement_Period__c</fullName>
        <label>Claim Settlement Period</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Claim_Settlement_Period_other__c</fullName>
        <label>Claim Settlement Other (please specify)</label>
        <length>256</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Claims_Incurred_from_Standard__c</fullName>
        <label>Claims Incurred from-Standard</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Claims_Incurred_to_Standard__c</fullName>
        <label>Claims Incurred to-Standard</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Claims_incurred_and_paid_from__c</fullName>
        <label>Claims incurred and paid from</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Claims_incurred_and_paid_to__c</fullName>
        <label>Claims incurred and paid to</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Column_1_Dental_Charge__c</fullName>
        <description>Dental run-off admin charge related to column 1 of the Termination Charge Section in the related ASO BPA document</description>
        <label>Dental Run-off Admin Charge  (Column 1)</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Column_1_Medical_Charge__c</fullName>
        <description>Medical run-off admin charge related to column 1 of the Termination Charge Section in the related ASO BPA document</description>
        <label>Medical Run-off Admin Charge (Column 1)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Column_1_Name__c</fullName>
        <description>Captures the name of the 1st column on the PEPM table of the ASO BPA</description>
        <label>Column 1 Name</label>
        <length>140</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Column_1_Total_excludes_dental__c</fullName>
        <description>Sums the Column 1 fees (excluding dental) from all related PEPM Fee records minus Prescription Drug rebates</description>
        <inlineHelpText>Sums the Column 1 fees (excluding dental) from all related PEPM Fee records minus Prescription Drug rebates</inlineHelpText>
        <label>Column 1 Total (excluding dental)</label>
        <summarizedField>PEPM_Fee__c.Column_1_Rollup_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>PEPM_Fee__c.PEPM_Product_Service_Name__c</field>
            <operation>notEqual</operation>
            <value>Dental</value>
        </summaryFilterItems>
        <summaryForeignKey>PEPM_Fee__c.Rate__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Column_2_Dental_Charge__c</fullName>
        <description>Dental run-off admin charge related to column 2 of the Termination Charge Section in the related ASO BPA document</description>
        <label>Dental Run-off Admin Charge (Column 2)</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Column_2_Medical_Charge__c</fullName>
        <description>Medical run-off admin charge related to column 2 of the Termination Charge Section in the related ASO BPA document</description>
        <label>Medical Run-off Admin Charge (Column 2)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Column_2_Name__c</fullName>
        <description>Captures the name of the 2nd column on the PEPM table of the ASO BPA</description>
        <label>Column 2 Name</label>
        <length>140</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Column_2_Total_excludes_dental__c</fullName>
        <description>Sums the Column 2 fees (excluding dental) from all related PEPM Fee records minus Prescription Drug rebates</description>
        <inlineHelpText>Sums the Column 2 fees (excluding dental) from all related PEPM Fee records minus Prescription Drug rebates</inlineHelpText>
        <label>Column 2 Total (excluding dental)</label>
        <summarizedField>PEPM_Fee__c.Column_2_Rollup_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>PEPM_Fee__c.PEPM_Product_Service_Name__c</field>
            <operation>notEqual</operation>
            <value>Dental</value>
        </summaryFilterItems>
        <summaryForeignKey>PEPM_Fee__c.Rate__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Column_3_Dental_Charge__c</fullName>
        <description>Dental run-off admin charge related to column 3 of the Termination Charge Section in the related ASO BPA document</description>
        <label>Dental Run-off Admin Charge (Column 3)</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Column_3_Medical_Charge__c</fullName>
        <description>Medical run-off admin charge related to column 3 of the Termination Charge Section in the related ASO BPA document</description>
        <label>Medical Run-off Admin Charge (Column 3)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Column_3_Name__c</fullName>
        <description>Captures the name of the 3rd column on the PEPM table of the ASO BPA</description>
        <label>Column 3 Name</label>
        <length>140</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Column_3_Total_excludes_dental__c</fullName>
        <description>Sums the Column 3 fees (excluding dental) from all related PEPM Fee records minus Prescription Drug rebates</description>
        <inlineHelpText>Sums the Column 3 fees (excluding dental) from all related PEPM Fee records minus Prescription Drug rebates</inlineHelpText>
        <label>Column 3 Total (excluding dental)</label>
        <summarizedField>PEPM_Fee__c.Column_3_Rollup_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>PEPM_Fee__c.PEPM_Product_Service_Name__c</field>
            <operation>notEqual</operation>
            <value>Dental</value>
        </summaryFilterItems>
        <summaryForeignKey>PEPM_Fee__c.Rate__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Commissions__c</fullName>
        <description>PEPM commissions that are charged by HCSC for the plan that the BPA relates to</description>
        <label>Commissions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Conga_Charges__c</fullName>
        <formula>IF( ISPICKVAL( Charges__c , &apos;Applies to all coverages&apos;) , &apos;Applies to all coverages&apos;, 
IF( ISPICKVAL( Charges__c , &apos;Different % / $ for types explained below&apos;) , &apos;Different percentage(s) or amount(s) for the following types of coverages. Please specify: &apos;+Different_explanation__c,
&quot;&quot;)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Conga Charges</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conga_External_Review_Coordination_Proce__c</fullName>
        <formula>IF( ISPICKVAL(External_Review_Coordination_Process__c, &quot;State of Illinois External Review Process&quot;) , &quot;State of Illinois External Review Process&quot;,
 IF( ISPICKVAL(External_Review_Coordination_Process__c, &quot;Federal Affordable Care Act Process&quot;) , &quot;Federal Affordable Care Act Process&quot;,
 IF( ISPICKVAL(External_Review_Coordination_Process__c, &quot;State of Texas External Review Process&quot;) , &quot;State of Texas External Review Process&quot;,
 IF( ISPICKVAL(External_Review_Coordination_Process__c, &quot;State of Oklahoma External Review Process&quot;) , &quot;State of Oklahoma External Review Process&quot;,
 IF( ISPICKVAL(External_Review_Coordination_Process__c, &quot;State of New Mexico External Review process&quot;) , &quot;State of New Mexico External Review process&quot;,
 IF( ISPICKVAL(External_Review_Coordination_Process__c, &quot;State of Montana External Review process&quot;) , &quot;State of Montana External Review process&quot;,
 IF( ISPICKVAL(External_Review_Coordination_Process__c, &quot;Employer has selected outside External Review Alternatives&quot;) , &quot;Employer has selected outside External Review alternatives.  Name of outside ERO vendor: &quot;+Name_of_ERO_vendor__c,&quot;&quot;
 )))))))</formula>
        <label>Conga External Review Coordination Proce</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conga_FTE_definition__c</fullName>
        <description>Captures definition of FTE for Conga</description>
        <formula>IF( ISPICKVAL( FTE_min_hrs_on_permanent_payroll__c, &quot;FTE = min hrs + on permanent payroll&quot;), &quot;A person who is regularly scheduled to work a minimum of hours &quot;+TEXT(Full_time_employee_FTE_min_hrs_wk__c)+&quot; per week and who is on the permanent payroll of the Employer.&quot;,
IF( ISPICKVAL( FTE_min_hrs_on_permanent_payroll__c, &quot;Other&quot;), &quot;Other: &quot; + Other_definition_of_FTE__c , &quot;&quot;))</formula>
        <label>Conga FTE definition</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conga_Group_Number_s__c</fullName>
        <formula>IF(Multiple_Provider_Access_Fees__c = true, &quot;Group Number(s): &quot; + Group_Number_s__c,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Conga Group Number(s)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conga_Misc_1__c</fullName>
        <description>Shows PEPM Miscellaneous 1 description that is shown in ASO BPA</description>
        <formula>if(ISBLANK(Misc_1_Description__c)==true,&quot;hide&quot;,&quot;Miscellaneous 1: &quot;&amp;Misc_1_Description__c)</formula>
        <label>Conga Misc 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conga_Misc_2__c</fullName>
        <description>Shows PEPM Miscellaneous 1 description that is shown in ASO BPA</description>
        <formula>if(ISBLANK(Misc_2_Description__c)==true,&quot;hide&quot;,&quot;Miscellaneous 2: &quot;&amp;Misc_2_Description__c)</formula>
        <label>Conga Misc 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conga_Multiple_Provider_Access_Fees_c__c</fullName>
        <formula>IF(Multiple_Provider_Access_Fees__c = true, &apos;Group with multiple Provider Access Fees by products (e.g., CMM, and/or PPO):&apos;, &quot;hide&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Conga Multiple_Provider_Access_Fees__c</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conga_Other_1_Service_Categ_Descr__c</fullName>
        <description>Shows PEPM Category 1 and Description 1 that is shown on the document</description>
        <formula>if(ISBLANK(TEXT(Other_1_Service_Category__c))=true&amp;&amp;ISBLANK(Other_1_Service_Name__c)=true,&quot;hide&quot;,&quot;Other 1 Category / Description: &quot;&amp;text(Other_1_Service_Category__c)+&quot; - &quot;&amp;Other_1_Service_Name__c)</formula>
        <label>Conga Other 1 Service Categ / Descr</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conga_Other_2_Service_Categ_Descr__c</fullName>
        <description>Shows PEPM Category 2 and Description 2 that is shown on the document</description>
        <formula>if(ISBLANK(TEXT(Other_2_Service_Category__c))=true&amp;&amp;ISBLANK(Other_2_Service_Name__c)=true,&quot;hide&quot;,&quot;Other 2 Category / Description: &quot;&amp;text(Other_2_Service_Category__c)+&quot; - &quot;&amp;Other_2_Service_Name__c)</formula>
        <label>Conga Other 2 Service Categ / Descr</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conga_Other_3_Service_Categ_Descr__c</fullName>
        <description>Shows PEPM Category 3 and Description 3 that is shown on the document</description>
        <formula>if(ISBLANK(TEXT(Other_3_Service_Category__c))=true&amp;&amp;ISBLANK(Other_3_Service_Name__c)=true,&quot;hide&quot;,&quot;Other 3 Category / Description: &quot;&amp;text(Other_3_Service_Category__c)+&quot; - &quot;&amp;Other_3_Service_Name__c)</formula>
        <label>Conga Other 3 Service Categ / Descr</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conga_of_ADP_Savings__c</fullName>
        <formula>IF(Multiple_Provider_Access_Fees__c = true, &quot;% of ADP Savings: &quot;+TEXT(of_ADP_savings_2__c)+&quot;%&quot;, &quot;&quot;)</formula>
        <label>Conga % of ADP Savings</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conga_per_Covered_Employee_per_month__c</fullName>
        <formula>IF(Multiple_Provider_Access_Fees__c = true, &quot;$ per Covered Employee per month: $ &quot;+TEXT(per_covered_employee_per_month_2__c), &quot;&quot;)</formula>
        <label>Conga $ per Covered Employee per month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conversion_Privilege__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Conversion Privilege</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Coverage_Type__c</fullName>
        <label>Coverage Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Renewal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Custom_Benefit_Plan_s_Selected__c</fullName>
        <label>Custom Benefit Plan(s) Selected</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DENTAL_CONTRIBUTION_EMPLOYEE_100_FAMILY__c</fullName>
        <defaultValue>false</defaultValue>
        <description>100% Employee Coverage Premium applied towards Family Coverage</description>
        <inlineHelpText>100% Employee Coverage Premium applied towards Family Coverage</inlineHelpText>
        <label>100% Premium applied to Family Coverage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DENTAL_CONTRIBUTION_EMPLOYEE_CHILD__c</fullName>
        <description>Employer Contribution: Employee + Child %</description>
        <label>Employee + Child</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DENTAL_CONTRIBUTION_EMPLOYEE_FAMILY__c</fullName>
        <description>Employer Contribution: Family Coverage %</description>
        <label>Family Coverage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DENTAL_CONTRIBUTION_EMPLOYEE_SPOUSE__c</fullName>
        <description>Employer Contribution: Employee + Spouse Coverage %</description>
        <label>Employee + Spouse Coverage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DENTAL_CONTRIBUTION_EMPLOYEE__c</fullName>
        <description>Employer Contribution:  Employee Coverage %</description>
        <label>Employee Coverage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Date_Claim_Incurred_on_or_after_and_paid__c</fullName>
        <inlineHelpText>Date Claim Incurred on or after and paid during the policy period</inlineHelpText>
        <label>Date Claim Incurred on or after and paid</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Dental_Run_off_Administration_Charge__c</fullName>
        <description>Fee to be paid to HCSC by the employer that the BPA relates to, for administering the run-off period for dental services for the plan that the BPA relates to</description>
        <label>Dental Run-off Administration Charge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Dental__c</fullName>
        <description>PEPM dental fee that is charged by HCSC for the plan that the BPA relates to</description>
        <label>Dental</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Different_explanation__c</fullName>
        <description>Explation of which coverages have different percentages or amounts for the plan that the BPA relates to</description>
        <label>Different % / $ explanation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Different_or_for_coverage_types__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Different % or $ for coverage types</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Direct_Employee_1_Dependent__c</fullName>
        <description>The difference between the plan deductible and the employer sponsered HCA for an HCA product that covers an employee and one dependent</description>
        <label>Direct: Employee + 1 Dependent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Direct_Employee_2_or_more_depends__c</fullName>
        <description>The difference between the plan deductible and the employer sponsered HCA for an HCA product that covers an employee and two or more dependents</description>
        <label>Direct: Employee + 2 or more depends</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Direct_Employee_Child_ren__c</fullName>
        <description>The difference between the plan deductible and the employer sponsered HCA for an HCA product that covers an employee and their children</description>
        <label>Direct: Employee + Child(ren)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Direct_Employee_Spouse__c</fullName>
        <description>The difference between the plan deductible and the employer sponsered HCA for an HCA product that covers the employee and their spouse</description>
        <label>Direct: Employee + Spouse</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Direct_Employee__c</fullName>
        <description>The difference between the plan deductible and the employer sponsered HCA for an HCA product that covers the employee only</description>
        <label>Direct: Employee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Direct_Family__c</fullName>
        <description>The difference between the plan deductible and the employer sponsered HCA for an HCA product that covers an employee&apos;s family</description>
        <label>Direct: Family</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Dispensing_Fee_Brand__c</fullName>
        <label>Dispensing Fee Brand</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Dispensing_Fee_Generic__c</fullName>
        <label>Dispensing Fee Generic</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Dispensing_Fee__c</fullName>
        <label>Dispensing Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Drug_List__c</fullName>
        <label>Drug List</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Select Drug List</fullName>
                </value>
                <value>
                    <fullName>Basic Drug List</fullName>
                </value>
                <value>
                    <fullName>Enhanced Drug List</fullName>
                </value>
                <value>
                    <fullName>Performance Drug List</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Performance Select Drug List</fullName>
                    <isActive>false</isActive>
                    <label>Performance Select Drug List</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EE_10__c</fullName>
        <label>EE</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EE_11__c</fullName>
        <label>EE</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EE_12__c</fullName>
        <label>EE</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EE_CH_10__c</fullName>
        <label>EE/CH</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EE_CH_11__c</fullName>
        <label>EE/CH</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EE_CH_12__c</fullName>
        <label>EE/CH</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EE_CH_Dental__c</fullName>
        <label>EE/CH Dental</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EE_CH_Vision__c</fullName>
        <label>EE/CH Vision</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EE_Dental__c</fullName>
        <label>EE Dental</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EE_SP_10__c</fullName>
        <label>EE/SP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EE_SP_11__c</fullName>
        <label>EE/SP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EE_SP_12__c</fullName>
        <label>EE/SP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EE_SP_Dental__c</fullName>
        <label>EE/SP Dental</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EE_SP_Vision__c</fullName>
        <label>EE/SP Vision</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EE_Vision__c</fullName>
        <label>EE Vision</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EFFECTIVE_TERMINATION_ELIGIBLE_OTHER__c</fullName>
        <label>Termination Other Date</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EFFECTIVE_TERMINATION_ELIGIBLE__c</fullName>
        <label>Effective Termination Date</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Date Person Ceases to Meet Eligible</fullName>
                </value>
                <value>
                    <fullName>Last Day of the calendar Month</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EO_Dental__c</fullName>
        <label>EO Dental</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EO_Vision__c</fullName>
        <label>EO Vision</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ESDental__c</fullName>
        <label>ES Dental</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ESN_Brand_AWP_minus__c</fullName>
        <label>ESN Brand AWP minus</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ESN_Dispensing_Fee__c</fullName>
        <label>ESN Dispensing Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ESN_Generic_AWP_minus__c</fullName>
        <label>ESN Generic AWP minus</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ESVision__c</fullName>
        <label>ES Vision</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Employee_1_Dependent_Total__c</fullName>
        <formula>RATE_EMPLOYEE_One_1__c + RATE_EMPLOYEE_One_2__c + RATE_EMPLOYEE_One_3__c + RATE_EMPLOYEE_One_4__c + RATE_EMPLOYEE_One_5__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Employee 1 Dependent Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Employee_2_Dependent_Total__c</fullName>
        <formula>RATE_EMPLOYEE_Two_1__c + RATE_EMPLOYEE_Two_2__c + RATE_EMPLOYEE_Two_3__c + RATE_EMPLOYEE_Two_4__c + RATE_EMPLOYEE_Two_5__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Employee 2+ Dependent Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Employee_Child_D_Amt_1__c</fullName>
        <description>Employee and Children Dental Plan 1 Rate as Currency Amount</description>
        <label>$ Employee/Children</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Employee_Child_D_Amt_2__c</fullName>
        <description>Employee and Children Dental Plan 2 Rate as Currency Amount</description>
        <label>$ Employee/Children</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Employee_Child_D_Per_1__c</fullName>
        <description>Employee and Children Dental Plan 1 Rate as Percentage</description>
        <label>% Employee/Children</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Employee_Child_D_Per_2__c</fullName>
        <description>Employee and Children Dental Plan 2 Rate as Percentage</description>
        <label>% Employee/Children</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Employee_Child_H_Amt_1__c</fullName>
        <description>Employee and Children Health Plan 1 Rate as Currency Amount</description>
        <label>$ Employee/Children</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Employee_Child_H_Amt_2__c</fullName>
        <description>Employee and Children Health Plan 2 Rate as Currency Amount</description>
        <label>$ Employee/Children</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Employee_Child_H_Amt_3__c</fullName>
        <description>Employee and Children Health Plan 3 Rate as Currency Amount</description>
        <label>$ Employee/Children</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Employee_Child_H_Per_1__c</fullName>
        <description>Employee and Children Health Plan 1 Rate as Percentage</description>
        <label>% Employee/Children</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Employee_Child_H_Per_2__c</fullName>
        <description>Employee and Children Health Plan 2 Rate as Percentage</description>
        <label>% Employee/Children</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Employee_Child_H_Per_3__c</fullName>
        <description>Employee and Children Health Plan 3 Rate as Percentage</description>
        <label>% Employee/Children</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Employee_Children_Total__c</fullName>
        <formula>RATE_EMPLOYEE_CHILD_1__c + RATE_EMPLOYEE_CHILD_2__c + RATE_EMPLOYEE_CHILD_3__c + RATE_EMPLOYEE_CHILD_4__c + RATE_EMPLOYEE_CHILD_5__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Employee Children Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Employee_Family_D_Amt_1__c</fullName>
        <description>Employee and Family Dental Plan 1 Rate as Currency Amount</description>
        <label>$ Employee/Family</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
</CustomObject>